--- a/.github/workflows/reviewdog.yml
+++ b/.github/workflows/reviewdog.yml
@@ -11,7 +11,14 @@ jobs:
         github_token: ${{ secrets.github_token }}
         reporter: github-pr-review
         flags: --linelength=50 # Optional
-
+        filter: "-readability/braces\
+          ,-whitespace/braces\
+          ,-whitespace/comments\
+          ,-whitespace/indent\
+          ,-whitespace/newline\
+          ,-whitespace/operators\
+          ,-whitespace/parens\
+          " # Optional
   shellcheck:
     name: runner / shellcheck
     runs-on: ubuntu-latest
