--- a/.github/workflows/pr-test.yml
+++ b/.github/workflows/pr-test.yml
@@ -7,7 +7,7 @@ jobs:
     steps:
     - name: clone
       uses: actions/checkout@master
-    - uses: reviewdog/action-cpplint@master
+    - uses: reviewdog/action-cpplint@feature/filter_config
       with:
         github_token: ${{ secrets.github_token }}
         # reporter: github-pr-review
