--- a/.github/workflows/pr-test.yml
+++ b/.github/workflows/pr-test.yml
@@ -7,7 +7,7 @@ jobs:
     steps:
     - name: clone
       uses: actions/checkout@master
-    - uses: .
+    - uses: ./
       with:
         github_token: ${{ secrets.github_token }}
         # reporter: github-pr-review
