--- a/.github/workflows/pr-test.yml
+++ b/.github/workflows/pr-test.yml
@@ -6,7 +6,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: clone
-      uses: actions/checkout@master
+      uses: actions/checkout@v3
     - uses: ./
       with:
         github_token: ${{ secrets.github_token }}
