--- a/.github/workflows/self-test.yml
+++ b/.github/workflows/self-test.yml
@@ -6,7 +6,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: clone
-      uses: actions/checkout@master
+      uses: actions/checkout@v3
       with:
         fetch-depth: 2
     - name: testbuild
